# betterqr

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  tempfile.txt
.github/workflows/: ci.yml  pages.yml  pypi-publish.yml  python-package.yml
devlogs/: devlog-6.md  devlog-7.md  devlog-SES3.md  devlog-SES4.md  devlog-SES5.md
docs/: DOCUMENTATION.md
pages/: index.html
pages/css/: styles.css
pages/js/: script.js
scripts/: report_to_discord.py
src/betterqr/: __init__.py  cli.py  core.py  encoder.py  exceptions.py  expections.py  gf.py  helpers.py  matrix.py  report_to_discord.py  secure.py  tables.py
src/betterqr/extras/: __init__.py  animation.py  image_ops.py
src/betterqr/render/: base.py  raster.py  terminal.py  vector.py
src/betterqr/tests/: test_cli.py
tests/: conftest.py  test_betterqr.py  test_decode_roundtrip.py  test_generation.py  test_performance.py  test_unit.py
