[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "betterqr"
description = "The upgraded qrcode library for Python"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["qrcode", "qrcode generator", "animated qrcode", "betterqr", "devx-dragon", "Sri Lanka"]
version = "2.0.0"
authors = [{ name = "DevX-Dragon" }]
license = { file = "LICENSE" }
dependencies = [
    "pillow>=10.0.0"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "zxing-cpp>=2.2.0",
    "cairosvg>=2.7.0",
]

[project.urls]
Homepage = "https://github.com/DevX-Dragon/BetterQR"
Issues   = "https://github.com/DevX-Dragon/BetterQR/issues"

[project.scripts]
betterqr = "betterqr.cli:main"

# ── package discovery ─────────────────────────────────────────────────────────
# Only the src/betterqr package is shipped to PyPI.
# The tests/ directory and scripts/ directory at the repo root are
# deliberately outside src/ so setuptools never includes them.

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where   = ["src"]
exclude = ["betterqr.tests*"]   # belt-and-suspenders: also exclude if tests live in src

[tool.setuptools.package-data]
betterqr = ["py.typed"]

# ── test configuration ────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"